# ba-logger

./: .gitignore  CMLibStorage.cmake  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  FindBASpdlog.cmake  libbringauto_loggerConfig.cmake
documentation/: README.md  logger_architecture.xml
example/: CMakeLists.txt  main.cpp
include/bringauto/logging/: Concepts.hpp  ConsoleSink.hpp  FileSink.hpp  Logger.hpp  LoggerId.hpp  LoggerImpl.hpp  LoggerSettings.hpp  LoggerVerbosity.hpp  RemoteSink.hpp  Sink.hpp  SizeLiterals.hpp  SyslogSink.hpp
include/fmt/: fmt.h
log_lib/dummy/: CMakeLists.txt
log_lib/dummy/src/bringauto/logging/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp  LoggerId.cpp  LoggerImpl.cpp  RemoteSink.cpp  SyslogSink.cpp
log_lib/spdlog/: CMakeLists.txt
log_lib/spdlog/include/bringauto/logging/: SpdlogHelper.hpp
log_lib/spdlog/src/bringauto/logging/: ConsoleSink.cpp  FileSink.cpp  Logger.cpp  LoggerImpl.cpp  RemoteSink.cpp  SpdlogHelper.cpp  SyslogSink.cpp
tests/: CMakeLists.txt  mainTests.cpp
tests/include/apiTesting/: LoggerApiTests.hpp  MultipleLoggersApiTests.hpp  SinksApiTests.hpp
tests/include/implementationTesting/: ImplementationTests.hpp
tests/src/apiTesting/: LoggerApiTests.cpp  MultipleLoggersApiTests.cpp  SinksApiTests.cpp
tests/src/implementationTesting/: ImplementationTests.cpp
